--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -16,7 +16,7 @@
     <meta name="google-site-verification" content="qD1LQEloxY59OxbpxR4DUS47ipoeDsnzra_OXilytdo" />
 
     <!-- ✅ SEO Meta Tags -->
-    <title>About Sachin Bansal | Political Science Mentor, Author & Educator</title>
+    <title> Sachin Bansal | Political Science Mentor, Author & Educator</title>
     <meta
       name="description"
       content="Meet Sachin Bansal, a dedicated Political Science mentor, author, and educator based in New Delhi with 7+ years of impactful teaching experience."
