--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/faviconand.png" />
+    <link rel="icon" type="image/svg+xml" href="/faviconand.png" style="border-radius: 50%;" />
 
 
     <!-- FontAwesome -->
